--- a/flink-benchmarks/pom.xml
+++ b/flink-benchmarks/pom.xml
@@ -24,6 +24,7 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
+            <version>20140107</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
